# Spatial-Temporal-Prediction-of-Storm

./: LICENSE  README.md  requirement.txt
 Task1/: pyproject.toml  task1_main.ipynb
 Task1/src/my_package/: __init__.py  data.py  model.py  train.py  utils.py
Task2/: dataloader_task2.py  model_task2.py
Task3/: config.py  data.py  model.py  train.py  utils.py
Task3/test/: test_data.py  test_model.py  test_train.py
Task4/: dataset.py  eval.py  model.py  task4_transformer.ipynb  train.py  utils.py
